Fixed spacing between list items of tasks - added 8px margin bottom

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -213,6 +213,7 @@ h2 {
   border-radius: 8px;
   padding: 16px 32px;
   align-items: center;
+  margin-bottom: 8px;
 }
 
 .taskItem > h4 {
